# ftp-rustified

./: .env  Cargo.toml  README.md  ftp_config_test.json  ftp_server.json
PUBLIC/: demo.txt  text2.txt
PUBLIC/carts/: cart1.txt
PUBLIC/dir1/: demo1.txt
ROOT/: demo.txt
src/: client.rs  client_command.rs  client_handler.rs  codec.rs  error.rs  ftp_config.rs  ftp_responce_code.rs  ftp_response.rs  ftp_response_code.rs  ftp_user.rs  main.rs  server.rs  utils.rs
src/client_handler/: client_handler.rs
src/file_system_handler/: file_system.rs
src/ftp_handler/: command.rs
src/tcp_handler/: server.rs
