[package]
name = "ftp-rustified"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.28.2", features = ["full"] }
tokio-io = "0.1.13"
chrono = "0.4.0"
serde = { version = "1.0.210", features = ["derive"] }
#toml = "0.8.19"
serde_json = "1.0.128"
bytes = { version = "0.4.12" }
cfg-if = "1.0.0"
time = "0.3.35"